--- a/src/manifest.json
+++ b/src/manifest.json
@@ -23,5 +23,8 @@
     "default_icon": "icon.png",
     "default_title": "Package Hub",
     "default_popup": "popup/set_api_key.html"
+  },
+  "icons": {
+    "80": "icon.png"
   }
 }
